--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
   <ul class="linkList">
     
   </ul>
-  <summary>
+  <div id="advancedStatsInfo">
     <h2>Advanced Statistics</h2>
     <p>Track how Your Links are performing across the web with our advanced statistics dashboard</p>
-  </summary>
+  </div>
   <div id="qualities">
     <div class="quality brandRecognition">
         <div class="imageContainer">
